fixed layout issue on small screens

--- a/cust/default/layout.css
+++ b/cust/default/layout.css
@@ -346,6 +346,11 @@ td.scoreinput.bright {
   margin-top: 5px;
 }
 
+.admintable td {
+  padding-left: 1px;
+  padding-right: 1px;
+}
+
 .infotable+.infotable {
   margin-top: 5px;
 }
